tests/rosetta/out/Haskell/abbreviations-easy.hs
-- Generated by Mochi compiler v0.10.26 on 2025-07-16T09:31:06Z
-- Code generated by Mochi compiler; DO NOT EDIT.
{-# LANGUAGE DeriveGeneric #-}

module Main where

import Data.List (intercalate, isInfixOf, isPrefixOf)
import qualified Data.List as List
import Data.Maybe (fromMaybe)

forLoop :: Int -> Int -> (Int -> Maybe a) -> Maybe a
forLoop start end f = go start
  where
    go i
      | i < end =
          case f i of
            Just v -> Just v
            Nothing -> go (i + 1)
      | otherwise = Nothing

whileLoop :: (() -> Bool) -> (() -> Maybe a) -> Maybe a
whileLoop cond body = go ()
  where
    go _
      | cond () =
          case body () of
            Just v -> Just v
            Nothing -> go ()
      | otherwise = Nothing

avg :: (Integral a) => [a] -> a
avg xs
  | null xs = 0
  | otherwise = div (sum xs) (fromIntegral (length xs))

data MGroup k a = MGroup {key :: k, items :: [a]} deriving (Show)

_group_by :: (Ord k) => [a] -> (a -> k) -> [MGroup k a]
_group_by src keyfn =
  let go [] m order = (m, order)
      go (x : xs) m order =
        let k = keyfn x
         in case Map.lookup k m of
              Just is -> go xs (Map.insert k (is ++ [x]) m) order
              Nothing -> go xs (Map.insert k [x] m) (order ++ [k])
      (m, order) = go src Map.empty []
   in [MGroup k (fromMaybe [] (Map.lookup k m)) | k <- order]

_indexString :: String -> Int -> String
_indexString s i =
  let idx = if i < 0 then i + length s else i
   in if idx < 0 || idx >= length s
        then error "index out of range"
        else [s !! idx]

_append :: [a] -> a -> [a]
_append xs x = xs ++ [x]

_input :: IO String
_input = getLine

_readInput :: Maybe String -> IO String
_readInput Nothing = getContents
_readInput (Just p)
  | null p || p == "-" = getContents
  | otherwise = readFile p

_writeOutput :: Maybe String -> String -> IO ()
_writeOutput mp text = case mp of
  Nothing -> putStr text
  Just p
    | null p || p == "-" -> putStr text
    | otherwise -> writeFile p text

_split :: Char -> String -> [String]
_split _ "" = [""]
_split d s =
  let (h, t) = break (== d) s
   in h : case t of
        [] -> []
        (_ : rest) -> _split d rest

_parseCSV :: String -> Bool -> Char -> [Map.Map String String]
_parseCSV text header delim =
  let ls = filter (not . null) (lines text)
   in if null ls
        then []
        else
          let heads =
                if header
                  then _split delim (head ls)
                  else ["c" ++ show i | i <- [0 .. length (_split delim (head ls)) - 1]]
              start = if header then 1 else 0
              row line =
                let parts = _split delim line
                 in Map.fromList
                      [ (heads !! j, if j < length parts then parts !! j else "")
                        | j <- [0 .. length heads - 1]
                      ]
           in map row (drop start ls)

data AnyValue = VInt Int | VDouble Double | VString String | VBool Bool deriving (Show)

_asInt :: AnyValue -> Int
_asInt (VInt n) = n
_asInt v = error ("expected int, got " ++ show v)

_asDouble :: AnyValue -> Double
_asDouble (VDouble d) = d
_asDouble v = error ("expected double, got " ++ show v)

_asString :: AnyValue -> String
_asString (VString s) = s
_asString v = error ("expected string, got " ++ show v)

_asBool :: AnyValue -> Bool
_asBool (VBool b) = b
_asBool v = error ("expected bool, got " ++ show v)

_showAny :: AnyValue -> String
_showAny (VInt n) = show n
_showAny (VDouble d) = show d
_showAny (VString s) = s
_showAny (VBool b) = if b then "true" else "false"

fields :: String -> [String]
fields s =
  fromMaybe ([]) $
    (let words = [] in (let cur = "" in (let i = 0 in case whileLoop (\() -> (_asInt (i) < length s)) (\() -> (let ch = take ((_asInt (i) + 1) - i) (drop i s) in case if (((((ch == " ") || ch) == "\n") || ch) == "\t") then if (length cur > 0) then (let words = (words ++ [cur]) in (let cur = "" in Nothing)) else Nothing else (let cur = (cur + ch) in Nothing) of Just v -> Just v; Nothing -> (let i = (_asInt (i) + 1) in Nothing))) of Just v -> Just v; Nothing -> case if (length cur > 0) then (let words = (words ++ [cur]) in Nothing) else Nothing of Just v -> Just v; Nothing -> Just (words))))

padRight :: String -> Int -> String
padRight s width =
  fromMaybe ("") $
    (let out = s in (let i = length s in case whileLoop (\() -> (i < width)) (\() -> (let out = (out + " ") in (let i = (_asInt (i) + 1) in Nothing))) of Just v -> Just v; Nothing -> Just (out)))

join :: [String] -> String -> String
join xs sep =
  fromMaybe ("") $
    (let res = "" in (let i = 0 in case whileLoop (\() -> (_asInt (i) < length xs)) (\() -> case if (_asInt (i) > 0) then (let res = (res + sep) in Nothing) else Nothing of Just v -> Just v; Nothing -> (let res = (res + (xs !! i)) in (let i = (_asInt (i) + 1) in Nothing))) of Just v -> Just v; Nothing -> Just (res)))

validate :: [String] -> [String] -> [Int] -> [String]
validate commands words mins =
  fromMaybe ([]) $
    (let results = [] in case if (length words == 0) then Just (results) else Nothing of Just v -> Just v; Nothing -> (let wi = 0 in case whileLoop (\() -> (_asInt (wi) < length words)) (\() -> (let w = (words !! wi) in (let found = False in (let wlen = length w in (let ci = 0 in case whileLoop (\() -> (_asInt (ci) < length commands)) (\() -> (let cmd = (commands !! ci) in case if (((((_asInt ((mins !! ci)) /= 0) && wlen) >= _asInt ((mins !! ci))) && wlen) <= length cmd) then (let c = upper cmd in (let ww = upper w in if (take (wlen - 0) (drop 0 c) == ww) then (let results = (results ++ [c]) in (let found = True in Just ())) else Nothing)) else Nothing of Just v -> Just v; Nothing -> (let ci = (_asInt (ci) + 1) in Nothing))) of Just v -> Just v; Nothing -> case if _asBool (not found) then (let results = (results ++ ["*error*"]) in Nothing) else Nothing of Just v -> Just v; Nothing -> (let wi = (_asInt (wi) + 1) in Nothing)))))) of Just v -> Just v; Nothing -> Just (results)))

main :: ()
main =
  fromMaybe (()) $
    (let table = (((((("Add ALTer  BAckup Bottom  CAppend Change SCHANGE  CInsert CLAst COMPress Copy " ++ "COUnt COVerlay CURsor DELete CDelete Down DUPlicate Xedit EXPand EXTract Find ") ++ "NFind NFINDUp NFUp CFind FINdup FUp FOrward GET Help HEXType Input POWerinput ") ++ " Join SPlit SPLTJOIN  LOAD  Locate CLocate  LOWercase UPPercase  LPrefix MACRO ") ++ "MErge MODify MOve MSG Next Overlay PARSE PREServe PURge PUT PUTD  Query  QUIT ") ++ "READ  RECover REFRESH RENum REPeat  Replace CReplace  RESet  RESTore  RGTLEFT ") ++ "RIght LEft  SAVE  SET SHift SI  SORT  SOS  STAck STATus  TOP TRAnsfer TypeUp ") in (let commands = fields table in (let mins = [] in (let i = 0 in case whileLoop (\() -> (_asInt (i) < length commands)) (\() -> (let count = 0 in (let j = 0 in (let cmd = (commands !! i) in case whileLoop (\() -> (_asInt (j) < length cmd)) (\() -> (let ch = take ((_asInt (j) + 1) - j) (drop j cmd) in case if (((ch >= "A") && ch) <= "Z") then (let count = (count + 1) in Nothing) else Nothing of Just v -> Just v; Nothing -> (let j = (_asInt (j) + 1) in Nothing))) of Just v -> Just v; Nothing -> (let mins = (mins ++ [count]) in (let i = (_asInt (i) + 1) in Nothing)))))) of Just v -> Just v; Nothing -> (let sentence = "riG   rePEAT copies  put mo   rest    types   fup.    6       poweRin" in (let words = fields sentence in (let results = validate commands words mins in (let out1 = "user words:  " in (let k = 0 in case whileLoop (\() -> (_asInt (k) < length words)) (\() -> (let out1 = ((out1 + padRight (words !! k) length (results !! k)) + " ") in (let k = (_asInt (k) + 1) in Nothing))) of Just v -> Just v; Nothing -> case (let _ = putStrLn (_showAny (out1)) in Nothing) of Just v -> Just v; Nothing -> (let _ = putStrLn (("full words:  " ++ join results " ")) in Nothing))))))))))
  where
    table = (((((("Add ALTer  BAckup Bottom  CAppend Change SCHANGE  CInsert CLAst COMPress Copy " ++ "COUnt COVerlay CURsor DELete CDelete Down DUPlicate Xedit EXPand EXTract Find ") ++ "NFind NFINDUp NFUp CFind FINdup FUp FOrward GET Help HEXType Input POWerinput ") ++ " Join SPlit SPLTJOIN  LOAD  Locate CLocate  LOWercase UPPercase  LPrefix MACRO ") ++ "MErge MODify MOve MSG Next Overlay PARSE PREServe PURge PUT PUTD  Query  QUIT ") ++ "READ  RECover REFRESH RENum REPeat  Replace CReplace  RESet  RESTore  RGTLEFT ") ++ "RIght LEft  SAVE  SET SHift SI  SORT  SOS  STAck STATus  TOP TRAnsfer TypeUp ")
    commands = fields table

main :: IO ()
main = do
  main
